styles.css
:root {
--white-color: #FFFFFF;
--black-color: hsl(0, 0%, 10%);
--sky-blue-color: #3D97B4;
--red-color: #EE685F;


}

@font-face {
    font-family: "montserrat";
    src: url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
}

*,
*::after,
*::before {
    box-sizing: border-box;
    margin: 0;
    padding: 0;
}

body {
    font-family: "montserrat", sans-serif;
    background-color: var(--white-color);
}

nav {
    display: flex;
    justify-content: space-between;
     margin-top: 20px;
     margin-left: 10px;
     background-color: var(--white-color);
}

.logo {
    margin-left: 13px;
}

.icon {
    margin-left: 100px;
}

.icon img {
        margin-left: -40px;
}

.heading-text {
    position: absolute;
    font-size: 30px;
    margin-top: 50px;
    margin-left: 15px;
}

.heading-paragraph {
    position: absolute;
    font-size: 20px;
   margin-left: 15px;
    margin-top: 150px;

}

.background-image {
    width: 100%;
        margin-top: 20px;
}

.search-destination {
    position: absolute;
       margin-top: 220px;
    margin-left: -310px;
    width: 95%;
}

.why-choose-us {
    margin-top: 50px;
    padding-top: 50px;
    padding-bottom: 50px;
    text-align: center;
    background-color: #F7F7F7;
}
   
 .reason {
    margin-top: 50px;
    text-align: center;
 }

 .why-choose-us p {
     margin-top: 15px;
    text-align: center;
margin-left: 30px;

 }
 .reason p {
    margin-top: 10px;
    text-align: center;
margin-left: 30px;

 }

.special-offers {
     margin-top: 80px;
    text-align: center;
}

.offer {
        padding-top: 11px;
    border: 1px solid #E7E6EB;
    border-radius: 10px;
    padding-bottom: 15px;
    margin-bottom: 20px;
}

.offer-container {
    margin-top: 60px;
    padding-top: 15px;
    width: 100%;
    margin-left: 20px;
}

.offer-image {
    width: 100%;
}

.rating {
    position: absolute;
    left: 40px;
    margin-top: 10px;
}

.favorite{
    margin-top: 10px;
    margin-left: -46px;
    position: absolute;
}

.offer h3 {
    margin-top: 20px;
    margin-left: 7px;
    text-align: left;
}
.offer h4 {
    margin-top: 7px;
    margin-left: 7px;
    text-align: left;
}

.price {
    margin-top: 12px;
    margin-left: -130px;
}

.reviews {
 margin-top: 80px;
    text-align: center;
}

.review-container {
    width: 100%;
    margin-left: 10px;
    padding-top: 60px;
    gap: 20px;
    overflow-x: auto;
    display: flex;
}

.review {
min-width: 85%;
text-align: left;
}

.review-image {
    margin-bottom: 20px;
margin-left: 70px;
}

.reviewer-name {
    margin-top: 15px;
}

.review-button{
    border: none;
}

.review-button img {
    margin-top: 350px;
    margin-right: -650px;
}

.recent-posts {
        margin-top: 80px;
    text-align: center;
}

.review-posts-container {
    padding-top: 70px;
}

.recent-posts-container {
margin-top: 60px;
}

.date {
    margin-left: -200px;
    margin-top: 22px;
}

.time {
    position: absolute;
    margin-left: 80px;
    margin-top: -25px;
}

.post-image {
margin-left: 10px;
}

.post h3 {
    margin-top: 10px;
    margin-left: 11px;
    text-align: left;
}

.post p {
    width: 90%;
    margin-top: 15px;
    margin-left: 11px;
    text-align: left;
}

.post {
    margin-bottom: 25px;
}

.section {
    margin-left: 12px;
    margin-bottom: 30px;
}

.section-container {
    margin-top: 40px;
    background-color: #F7F7F7;
    padding-top: 60px;
    margin-bottom: 5px;
    padding-bottom: 15px;
}

.section p {
    margin-top: 15px;
}

.subscribtion {
    margin-left: 12px;
}

.subscribtion-box p {
    margin-bottom: 5px;
    margin-top: 20px;
}

.rectangular-box {
    width: 90%;
}

.footer {
    margin-left: 12px;
}

.send-button {
    position: absolute;
    width: 11%;
    margin-left: -20px;
}

.divider {
    margin-top: 25px;
    margin-bottom: 20px;
}

.divider img {
    width: 90%;
    margin-left: 13px;
}

.socials {
    margin-top: 8px;
    margin-bottom: 10px;
}

.delvig {
    color: #3D97B4;
}

